# Notes

./: .gitignore  README.md
Cpp/: __declspec.md  arrays.md  conan.md  constexpr.md  enum.md  exception_handling.md  inline_functions.md  memory_management.md  namespace.md  obj_mem_address_assignment.md  pointer_arithmatic.md  pointers.md  pointers_and_references.md  reading_types.md  structs.md  templates.md  using.md
Cpp/Notes/pybind11/pybind11_example/: CMakeLists.txt  example.py
Cpp/Notes/pybind11/pybind11_example/include/: main.hpp
Cpp/Notes/pybind11/pybind11_example/src/: binder.cpp  main.cpp
Cryptography/: diffie_hellman_key_exchange.md  digital_signature_and_certificates.md  euclidean_algorithm.md  eulers_theorem.md  rsa_cipher.md  ssh.md
Design Patterns/: introduction.md
General/: DTO.md  Linux.md  asynchronous_programming.md  binary_compatibility.md  binary_compatibility_ABI_API.md  empowered_teams.md  engineering_principles.md  gaming_rates.md  hardware_vs_software_rendering.md  integer_overflow.md  memory_layout.md  runtimes.md  string_encoding.md  threads.md  twos_complement.md  virtual_memory_addresses.md  windows_registry.md
Git/: github_actions.md
Hardware/: CPU.md
JavaScript/: promises.md
Math/: 3D_2D_arrays_to_1D.md  README.md  fractions.md  logarithms.md  ratios.md  units.md
Networking/: dns.md  internet_protocol_suite.md  mac_address.md  nat.md  network_socket.md  port_numbers.md  subnets.md
Python/: PyPI_PIP_Wheel.md  ZODB.md  arg_parser.md  creating_an_executable.md  decorators.md  descriptors.md  executing_the_python_script.md  (+5 more)
(+132 files in other folders)
